--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -158,8 +158,148 @@ header {
 
 #h1{
     text-align: center;
-    font-size: 35px;
+    font-size: 40px;
     margin-top: 80px;
    
 }
 
+
+
+.img5{
+  width: 200px;
+height: 320px;
+}
+
+#btn2{
+  width:  200px;
+  height: 50px;;
+  font-size: 20px;
+  background-color: white;
+  margin-top: 9px;
+
+
+}
+
+
+#cards3{
+  
+  margin-top: 40px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  gap: 90px;
+}
+
+
+#cards4{
+  
+  margin-top: 360px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  gap: 90px;
+}
+
+
+#card3{
+  width: 200px;
+  height: 320px;
+  
+}
+
+
+
+.cards5{
+  background-color: #F7F6F5;
+
+  display: flex;
+  flex-direction: row;
+
+  margin-top: 380px;
+
+}
+
+.cards6{
+  background-color: #F7F6F5;
+
+  display: flex;
+  flex-direction: row;
+
+
+
+}
+
+
+
+#h2{
+  text-align: center;
+  font-size: 40px;
+  margin-top: 320px;
+ 
+}
+
+
+
+.cards2{
+  background-color: #F7F6F5;
+
+  display: flex;
+  flex-direction: row;
+
+  margin-top: 50px;
+
+}
+
+
+#cards6{
+  justify-content: space-between;
+  
+  display: flex;
+  flex-direction: column;
+ 
+  gap: 20px;
+
+  margin-top: 150px;
+  align-items: center;
+  
+}
+
+
+#btn4{
+  width:  220px;
+  height: 50px;;
+  font-size: 20px;
+  background-color: white;
+  margin-top: 9px;
+
+
+}
+
+
+#divider{
+  width: 500px;
+  border: 2px solid black;
+  margin-bottom: 30px;
+}
+
+
+#p2{
+
+  font-size: 25px;
+  margin: 0;
+  padding: 0;
+}
+
+#card7{
+  margin-top: 30px;
+  
+  align-items: center;
+  text-align: center;
+
+
+  gap: 0;
+}
